--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,30 +7,30 @@
   {
     # Replace with repo name, for example, objPad
     "source": "repo/repo.pot",
-    "translation": "repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
+    "translation": "repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po",
+    "languages_mapping" : {
+      "two_letters_code" : {
+        "es-ES" : "es",
+        "pt-PT": "pt"
+      }
+    }
   },
   {
     "source": "repo/repo.pot",
     "translation": "repo/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po",
-    "languages_mapping": {
-      "locale_with_underscore": {
-        "es_ES": "es",
-        "pt_PT": "pt",
-      }
-    }
   },
   {
     "source": "repo/readme.pot",
-    "translation": "repo/doc/%two_letters_code%/readme.po"
+    "translation": "repo/doc/%two_letters_code%/readme.po",
+    "languages_mapping" : {
+      "two_letters_code" : {
+        "es-ES" : "es",
+        "pt-PT": "pt"
+      }
+    }
   },
   {
     "source": "repo/readme.pot",
     "translation": "repo/doc/%locale_with_underscore%/readme.po",
-    "languages_mapping": {
-      "locale_with_underscore": {
-        "es_ES": "es",
-        "pt_PT": "pt",
-      }
-    }
   }
 ]
