--- a/crowdin.yml
+++ b/crowdin.yml
@@ -6,11 +6,12 @@
 "files": [
   {
     "source": "repo/repo.pot",
-    "translation": "repo/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
-  },
-    {
-    "source": "repo/repo.pot",
-    "translation": "repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
+    "translation": "repo/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po",
+    languages_mapping: {
+      "locale_with_underscore": {
+        "es_ES": "es"
+      }
+    }
   },
   {
     "source": "repo/readme.pot",
