--- a/crowdin.yml
+++ b/crowdin.yml
@@ -6,7 +6,7 @@
 "files": [
   {
     "source": "repo/repo.pot",
-    "translation": "repo/locale/%two_letters_code%*%/LC_MESSAGES/nvda.po"
+    "translation": "repo/locale/%two_letters_code%*/LC_MESSAGES/nvda.po"
   },
   {
     "source": "repo/readme.pot",
