--- a/crowdin.yml
+++ b/crowdin.yml
@@ -6,10 +6,10 @@
 "files": [
   {
     "source": "repo/repo.pot",
-    "translation": "repo/locale/%two_letters_code%*/LC_MESSAGES/nvda.po"
+    "translation": "repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
   },
   {
     "source": "repo/readme.pot",
-    "translation": "repo/doc/%two_letters_code%*/readme.po"
+    "translation": "repo/doc/%two_letters_code%/readme.po"
   }
 ]
