--- a/crowdin.yml
+++ b/crowdin.yml
@@ -9,7 +9,15 @@
     "translation": "repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
   },
   {
+    "source": "repo/repo.pot",
+    "translation": "repo/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
+  },
+  {
     "source": "repo/readme.pot",
     "translation": "repo/doc/%two_letters_code%/readme.po"
+  },
+    {
+    "source": "repo/readme.pot",
+    "translation": "repo/doc/%locale_with_underscore%/readme.po"
   }
 ]
