--- a/.github/workflows/exportFromCrowdin.yml
+++ b/.github/workflows/exportFromCrowdin.yml
@@ -8,7 +8,7 @@ on:
         required: true
 
 jobs:
-  exportToCrowdin:
+  exportFromCrowdin:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -95,6 +95,7 @@ jobs:
           upload_sources: false
           upload_translations: false
           download_translations: true
+          create_pull_request: false
 
           auto_approve_imported: true
         env:
