--- a/.github/workflows/exportFromCrowdin.yml
+++ b/.github/workflows/exportFromCrowdin.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           upload_sources: false
           upload_translations: false
+          download_sources: true
           download_translations: true
           create_pull_request: false
           auto_approve_imported: true
