--- a/.github/workflows/exportFromCrowdin.yml
+++ b/.github/workflows/exportFromCrowdin.yml
@@ -17,24 +17,39 @@ jobs:
       - name: Checkout main branch
         uses: actions/checkout@v4
 
-      - name: Set configuration for add-on repo
+      - name: Remove config file
+        run: git rm crowdin.yml
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
         run: |
-          sed -i'.bak' 's/\(^.*: \"\)\(repo\/\)\(.*$\)/\1${{ github.event.inputs.repo }}\/\3/' crowdin.yml
-          sed -i'.bak' 's/\(^.*\/\)\(repo.po\)\(.*$\)/\1${{ github.event.inputs.repo }}.po\3/' crowdin.yml
+          pip install scons markdown
+          sudo apt update
+          sudo apt install gettext
+          sudo apt install translate-toolkit
+      - name: Checkout add-on
+        uses: actions/checkout@v4
+        with:
+          repository: nvdaaddons/${{ github.event.inputs.repo }}
+          path: addon
+          ref: stable
+      - name: Create add-on
+        run: |
+          cd addon
+          scons
+      - name: Create pot file
+        run: |
+          cd addon
+          scons pot
+      - name: Convert markdown to pot
+        run: md2po -P readme.md addon
 
 
-      #- name: Commit and push
-        #run: |
-          #git config user.name github-actions
-          #git config user.email github-actions@github.com
-          #git add crowdin.yml
-          #git commit -m "Update configuration to register ${{github.event.inputs.repo}}"
-          #git branch -u origin/main
-          #git pull
-          #git push
 
-
-      - name: Crowdin upload
+      - name: Crowdin download
         uses: crowdin/github-action@v2
         with:
           upload_sources: false
