--- a/.github/workflows/exportFromCrowdin.yml
+++ b/.github/workflows/exportFromCrowdin.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Crowdin download
         uses: crowdin/github-action@v2
         with:
+          command: download translations
           upload_sources: false
-          download_bundle: 1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
