--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -92,8 +92,8 @@ jobs:
       - name: Crowdin upload
         uses: crowdin/github-action@v2
         with:
-          upload_sources: true
-          upload_translations: true
+          #upload_sources: true
+          #upload_translations: true
           auto_approve_imported: true
           download_sources: true
           download_translations: true
