Update configuration to register clipContentsDesigner

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,20 +4,21 @@
 "preserve_hierarchy": true
 
 "files": [
+  # clipContentsDesigner
   {
-    "source": "repo/repo.pot",
-    "translation": "repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
+    "source": "clipContentsDesigner/clipContentsDesigner.pot",
+    "translation": "clipContentsDesigner/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
   },
   {
-    "source": "repo/repo.pot",
-    "translation": "repo/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
+    "source": "clipContentsDesigner/clipContentsDesigner.pot",
+    "translation": "clipContentsDesigner/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
   },
   {
-    "source": "repo/readme.pot",
-    "translation": "repo/doc/%two_letters_code%/readme.po"
+    "source": "clipContentsDesigner/readme.pot",
+    "translation": "clipContentsDesigner/doc/%two_letters_code%/readme.po"
   },
     {
-    "source": "repo/readme.pot",
-    "translation": "repo/doc/%locale_with_underscore%/readme.po"
+    "source": "clipContentsDesigner/readme.pot",
+    "translation": "clipContentsDesigner/doc/%locale_with_underscore%/readme.po"
   }
 ]
