--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -88,8 +88,8 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add crowdin.yml
-          git add ${ github.event.inputs.repo }
-          git commit -m "Register ${{github.event.inputs.repo}}"
+          git add ${{ github.event.inputs.repo }}
+          git commit -m "Register ${{ github.event.inputs.repo }}"
           git branch -u origin/main
           git pull
           git push
