--- a/crowdin.yml
+++ b/crowdin.yml
@@ -5,19 +5,19 @@
 
 "files": [
   {
-    "source": "*/nvda.pot",
-    "translation": "*/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
+    "source": "**/nvda.pot",
+    "translation": "**/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
   },
   {
-    "source": "*/nvda.pot",
-    "translation": "*/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
+    "source": "**/nvda.pot",
+    "translation": "**/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
   },
   {
-    "source": "*/readme.pot",
-    "translation": "*/doc/%two_letters_code%/readme.po"
+    "source": "**/readme.pot",
+    "translation": "**/doc/%two_letters_code%/readme.po"
   },
     {
-    "source": "*/readme.pot",
-    "translation": "*/doc/%locale_with_underscore%/readme.po"
+    "source": "**/readme.pot",
+    "translation": "**/doc/%locale_with_underscore%/readme.po"
   }
 ]
