--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -107,11 +107,8 @@ jobs:
       - name: Crowdin upload
         uses: crowdin/github-action@v2
         with:
-          command: |
-            file upload ${{ github.event.inputs.repo }}/nvda.pot
-            command_args: '-d ${{ github.event.inputs.repo }}/nvda.pot'
-            file upload ${{ github.event.inputs.repo }}/readme.pot
-            command_args: '-d ${{ github.event.inputs.repo }}/readme.pot'
+          command: file upload ${{ github.event.inputs.repo }}/*.pot
+          command_args: '-d ${{ github.event.inputs.repo }}'
           upload_translations: true
           auto_approve_imported: true
           upload_sources: false
@@ -119,3 +116,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
+          
