--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -109,7 +109,7 @@ jobs:
         with:
           command: file upload ${{ github.event.inputs.repo }}/nvda.pot
           command_args: '-d ${{ github.event.inputs.repo }}/nvda.pot'
-          upload_translations: true
+          upload_translations: false
           auto_approve_imported: true
           upload_sources: false
         env:
@@ -122,11 +122,17 @@ jobs:
         with:
           command: file upload ${{ github.event.inputs.repo }}/readme.pot
           command_args: '-d ${{ github.event.inputs.repo }}/readme.pot'
-          upload_translations: true
+          upload_translations: false
           auto_approve_imported: true
           upload_sources: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
-          
+      - name: Crowdin upload translations
+        uses: crowdin/github-action@v2
+        with:
+          upload_translations: true
+          auto_approve_imported: true
+          CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
+          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
