--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,9 @@
-"project_id_env": "CROWDIN_PROJECT_ID"
-"api_token_env": "CROWDIN_PERSONAL_TOKEN"
+"project_id": "projectId"
+"api_token": "personal-access-token"
 "base_path": "."
 "preserve_hierarchy": true
+"project_id_env": "CROWDIN_PROJECT_ID"
+"api_token_env": "CROWDIN_PERSONAL_TOKEN"
 "files": [
   {
     "source": "clipContentsDesigner/nvda.pot",
