--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,7 @@
-"project_id": "projectId"
-"api_token": "personal-access-token"
+"project_id_env": "CROWDIN_PROJECT_ID"
+"api_token_env": "CROWDIN_PERSONAL_TOKEN"
 "base_path": "."
+
 "preserve_hierarchy": true
 
 "files": [
