--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -136,6 +136,8 @@ jobs:
           upload_translations: true
           download_translations: false
           source: ${{ github.event.inputs.repo }}/*.pot
-          translation: ${{ github.event.inputs.repo }}/%two_letters_code%.po
+          translation: ${{ github.event.inputs.repo }}/**/%two_letters_code%/**/*.po
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
