--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -134,7 +134,7 @@ jobs:
           upload_sources: false
           upload_translations: true
           download_translations: false
-          source: ${{ github.event.inputs.repo }}/*.pot
+          source: **/*.pot
           translation: ${{ github.event.inputs.repo }}/**/%two_letters_code%/**/*.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
