--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -134,8 +134,8 @@ jobs:
           upload_sources: false
           upload_translations: true
           download_translations: false
-          source: **/*.pot
-          translation: ${{ github.event.inputs.repo }}/**/%two_letters_code%/**/*.po
+          source: '**/*.pot'
+          translation: '**/%two_letters_code%/**/*.po'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
