--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -131,7 +131,7 @@ jobs:
       - name: Crowdin upload two letters codes
         uses: crowdin/github-action@v2
         with:
-          upload_sources: false
+          upload_sources: true
           upload_translations: true
           download_translations: false
           source: '**/*.pot'
