--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -133,9 +133,10 @@ jobs:
         with:
           upload_sources: true
           upload_translations: true
+          auto_approve_imported: true
           download_translations: false
-          source: '**/*.pot'
-          translation: '**/%two_letters_code%/**/*.po'
+          source: ${{ github.event.inputs.repo }}/**/*.pot'
+          translation: ${{ github.event.inputs.repo }}/%two_letters_code%/**/*.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
