--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -60,7 +60,7 @@ jobs:
           if [ -d "addon/addon/locale" ]; then
           cd addon/addon/locale
           for dir in *; do
-          mkdir ${{ github.event.inputs.repo }}/$dir
+          mkdir -p ${{ github.event.inputs.repo }}/$dir
           mv "$dir/LC_MESSAGES/nvda.po" "${{ github.event.inputs.repo }}/$dir/nvda.po" -f
           done
                     else
