--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -87,7 +87,7 @@ jobs:
           if [ -d "addon/addon/doc" ]; then
           cd addon/addon/doc
           for dir in */; do
-          mv "$dir" "${{ github.event.inputs.repo }}
+          mv "$dir" "${{ github.event.inputs.repo }}""
           done
                     else
           echo "Warning: Folder addon/addon/doc does not exist."
