--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Replace underscores with dashes
         run: |
           cd ${{ github.event.inputs.repo }}
-          for dir in *; do
+          for dir in */; do
           mv "$dir" "${dir//_/-}"
           done
 
