--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -100,6 +100,8 @@ jobs:
           dirs=(*)
           if [ ${#dirs[@]} -gt 0 ]; then
           for dir in $dirs; do
+          if [ "$dir" = "nvda.po" ] || [ "$dir" = "readme.po" ]; then
+
           mv "$dir" "${dir//_/-}"
           done
           else
