--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -123,8 +123,8 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add ${{ github.event.inputs.repo }}/*.pot
-          git add ${{ github.event.inputs.repo }}/locale/**/*.po
-          git add ${{ github.event.inputs.repo }}/doc/**/*.po
+          git add ${{ github.event.inputs.repo }}/**/*.po
+
           git commit -m "Register ${{ github.event.inputs.repo }}"
           git branch -u origin/main
           git pull
