--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -122,9 +122,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add ${{ github.event.inputs.repo }}/*.pot
-          git add ${{ github.event.inputs.repo }}/**/*.po
-
+          git add ${{ github.event.inputs.repo }}
           git commit -m "Register ${{ github.event.inputs.repo }}"
           git branch -u origin/main
           git pull
